修复文档内容，与代码对其